Clean up DKG and include basics of signing in yellowpaper

--- a/docs/random-beacon/index.adoc
+++ b/docs/random-beacon/index.adoc
@@ -102,6 +102,6 @@ include::group-selection/index.adoc[leveloffset=+2]
 
 include::dkg/index.adoc[leveloffset=+2]
 
-include::pricing.adoc[leveloffset=+1]
+include::signing/index.adoc[leveloffset=+2]
 
 include::glossary.adoc[]
