--- a/docs/rfc/rfc-16-pricing.adoc
+++ b/docs/rfc/rfc-16-pricing.adoc
@@ -23,7 +23,7 @@ for customer applications to query the current _entry fee estimate_.
 The customer should provide a _callback address_ to receive the entry,
 and ensure they provide a sufficient _callback allowance_
 to cover the gas fees of the callback.
-Any surplus is returned to the customer in a _surplus recipient_ address.
+Any surplus is returned to the customer.
 
 When a valid entry is submitted,
 the submitter receives a _submitter reward_
@@ -49,32 +49,27 @@ such as price discrimination being defeated by callback pooling.
 When a customer wishes to receive an entry,
 they should query the beacon for a current _entry fee estimate_.
 The customer should also know
-the _callback address_ they wish to receive the entry in,
-and the _surplus recipient_ address for refunding excess fees.
+the _callback address_ they wish to receive the entry in.
 The customer should prepare a sufficient _callback allowance_
 to cover the gas costs of the callback.
 
 When making a request for an entry,
-the customer should submit the request
-with the _callback_ and _surplus recipient_ addresses
+the customer should submit the request with the _callback_ address
 while transferring _request fee = entry fee estimate + callback allowance_
 currency to the beacon.
 However, no new requests should be made
 while the beacon is already processing another request.
-Requests made while the beacon is busy
-will be rejected and the payment will not be transferred from the requester.
+Requests made while the beacon is busy will be rejected
+and the transaction reverted.
 
 ==== Receiving a request
 
 If the beacon is already serving an earlier request,
 it rejects any new requests
-and refunds the _request fee_
-to the surplus recipient of the rejected request.
+(implicitly refunding the fees by reverting the transactions).
 
 When the beacon is non-busy and receives a request,
-it first checks that the _request fee_ exceeds
-the _entry fee estimate + minimum callback allowance_.
-Insufficiently funded entries forfeit the request fee.
+it first checks that the _request fee_ exceeds the _entry fee estimate_.
 
 Once the request has been verified to be sufficiently funded,
 it is queued as the _pending request_
@@ -115,7 +110,7 @@ The callback gas expenditure is subtracted from the callback allowance
 to obtain the _callback gas surplus_.
 
 The _callback gas surplus_ is refunded
-to the requester's _surplus recipient_ address,
+to the requester's address,
 along with 1% of the _request subsidy pool_ of the beacon.
 
 The submitter and other group members are rewarded
